examples/test/testpolicy4746.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4746
  namespace: namespace342
spec:
  podSelector:
    matchLabels:
      key45: value8
      key29: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value34
          key24: value29
      podSelector:
        matchLabels:
          key5: value21
          key36: value30
